2000-05-02  Robert Graham Merkel  <rgmerk@mira.net>

	* man/gnc-prices.1: fixed typo.

	* src/scm/report/transaction-report-2.scm: fixed typo for debit string
	and reversed displayed sign in debit column.

2000-05-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report-2.scm : Added i18n and
	optional two-columns printout to the new transaction report.

2000-04-30  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Queue.c (xaccQueueGetShares): computation should start
	at the tail split, not at split 0.
	(xaccQueueGetValue): ditto.

	* src/scm/report/average-balance.scm: track stock account balances,
	i.e. value, not cost.

2000-04-29  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/splitreg.c: add a flag determining whether to use
	regular labels or only debit/credit.

	* src/gnome/top-level.c: implement the debit/credit label option

	* src/scm/prefs.scm: added option to only use debit/credit labels
	in the register.

	* src/MultiLedger.h: remove the MAX_SPLITS constants

	* src/gnome/window-main.c (gnc_ui_refresh_statusbar): no need to
	reverse quantities.

	* src/gnome/top-level.c (gnc_configure_reverse_balance): take out
	debit sign-reversal type.

	* src/scm/prefs.scm: take out debit sign-reversal type

	* src/SplitLedger.c: debit/credit reversal.

	* src/register/pricecell.c: debit/credit reversal.

	* src/register/splitreg.c: switch the column labels for the
	debit/credit reversal.

	* src/gnome/window-reconcile.c: fix up the dialog for the
	debit/credit reversal. Also, fix the calculations so the user
	can change sign-reversal modes while the dialog is open.

	* src/gnome/window-main.c (gnc_ui_delete_account): refresh the
	main window fully.

	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): debits are
	positive, credits are negative.

2000-04-28  Robert Graham Merkel  <rgmerk@mira.net>

 	* src/scm/html-generator.scm (html-table-do-entry): Bryan Larsen's
	fix for null (#f) generators.
